--- a/wiki/vimwiki/index.wiki
+++ b/wiki/vimwiki/index.wiki
@@ -5,8 +5,19 @@
 [[Topic 1]] 
 [[Topic 2]]
 [[Topic 3]]
+[[Topic_4]]
+
+[[exercise_4]]
 
 
 === PISDM ===
 [[Topic_1]]
 [[Topic_2]]
+[[Topic_3]]
+
+
+[[exercise_4_question3_4_5]]
+
+
+[[eg]]
+
